Added new project

--- a/index.html
+++ b/index.html
@@ -93,10 +93,20 @@
         <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
+            <div class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  COURSE SCHEDULER
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/course-scheduler.png" alt="">
+            </div>
+          </div>
+          <div class="col-sm-4 portfolio-item">
             <div class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  MEALTIME
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/meal-time.png" alt="">
@@ -106,7 +116,7 @@
             <div class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  SHROOM LAB
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/shroom-lab.png" alt="">
@@ -116,7 +126,7 @@
             <div class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  FIVERR NOTIFIER
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/fiverr.png" alt="">
@@ -126,7 +136,8 @@
             <div class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  DATA ANALYZER
+                  <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/data-analyzer.png" alt="">
@@ -136,7 +147,7 @@
             <div class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  LIFE OF JOE
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/loj.png" alt="">
@@ -339,6 +350,9 @@
                     <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
                       ⇀
                     </div>
+                    <div href="#portfolioModal6" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #9D2933">
+                        ⇀
+                    </div>
                   </div>
                   <h5><a href="https://github.com/BenWong1097/Fiverr-Buyer-Request-Notifier" target="_blank">- Source Code -</a></h5>
                   <ul align="left" style="margin-top:30px">
@@ -390,6 +404,9 @@
                     </div>
                     <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
                       ⇀
+                    </div>
+                    <div href="#portfolioModal6" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #9D2933">
+                        ⇀
                     </div>
                   </div>
                   <h5><a href="https://github.com/BenWong1097/Data-Analyzer" target="_blank">- Source Code -</a></h5>
@@ -444,6 +461,9 @@
                     </div>
                     <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
                       ⇀
+                    </div>
+                    <div href="#portfolioModal6" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #9D2933">
+                        ⇀
                     </div>
                   </div>
                   <!-- <ul align="left" style="margin-top:30px">
@@ -511,6 +531,9 @@
                     <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
                       ⇀
                     </div>
+                    <div href="#portfolioModal6" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #9D2933">
+                      ⇀
+                    </div>
                   </div>
                   <h5><a href="https://github.com/BenWong1097/Chillennium2017ShroomLab" target="_blank">- Source Code -</a></h5>
                   <ul align="left" style="margin-top:30px;">
@@ -566,6 +589,9 @@
                     <div href="#portfolioModal5" class="nav-arrow2 not-active" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
                       ⇀
                     </div>
+                    <div href="#portfolioModal6" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #9D2933">
+                      ⇀
+                    </div>
                   </div>
                   <h5><a href="https://github.com/BenWong1097/MealTime" target="_blank">- Source Code -</a></h5>
                   <ul align="left" style="margin-top:30px;">
@@ -596,7 +622,28 @@
                 <div class="modal-body">
                   <h2>Project Title</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/place_holder.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/course-scheduler.png" alt="">
+                  <!-- PROJECT SELECTION -->
+                  <div class="row">
+                      <div href="#portfolioModal3" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #8CD248  ">
+                        ⇀
+                      </div>
+                      <div href="#portfolioModal2" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #FF9536">
+                        ⇀
+                      </div>
+                      <div href="#portfolioModal1" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #0F9F34">
+                        ⇀
+                      </div>
+                      <div href="#portfolioModal4" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #C284C9">
+                        ⇀
+                      </div>
+                      <div href="#portfolioModal5" class="nav-arrow2" data-dismiss="modal" data-toggle="modal" style="color: #EFF34B">
+                        ⇀
+                      </div>
+                      <div href="#portfolioModal6" class="nav-arrow2 not-active" data-dismiss="modal" data-toggle="modal" style="color: #9D2933">
+                        ⇀
+                      </div>
+                    </div>
                   <!--Content: To be added...-->
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
