Added content for course-scheduler

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Course Scheduler</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/course-scheduler.png" alt="">
                   <!-- PROJECT SELECTION -->
@@ -644,7 +644,12 @@
                         ⇀
                       </div>
                     </div>
-                  <!--Content: To be added...-->
+                  <ul align="left" style="margin-top:30px;">
+                    <li>Group project for the <b><a href="https://maroonlink.tamu.edu/organization/Engineers_Serve_Community">Engineers Serving the Community (ESC)</a></b> organization</li>
+                    <li>Served as the front end developer of the team, also helping with part of the backend</li>
+                    <li>Worked with Angular and Node.js</li>
+                    <li>Check out the <a href="https://open-edu-tamu.herokuapp.com" target="_blank"><b>demo</b></a>!</li>
+                  </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
