--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a class="nav-link" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
+            <a class="nav-link" href="#languages">Languages</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#courses">Coursework</a>
@@ -158,9 +158,9 @@
     </section>
 
     <!-- Skills Section -->
-    <section class="success" id="skills">
+    <section class="success" id="languages">
       <div class="container">
-        <h2 class="text-center">Skills</h2>
+        <h2 class="text-center">Languages</h2>
         <hr class="star-light">
         <ul class="skill-icon">
           <li id="skill_cpp"><img src="img/skills/cplusplus.png" alt="C++" class="skill-logo" title="C++"></li>
@@ -185,26 +185,56 @@
           <hr class="star-primary">
           <div class="col-sm-6 m-auto">
             <ul class="list-group">
+              <li class="list-group-item">
+                CSCE 315: Programming Studio
+                <span class="badge badge-default badge-pill float-right">
+                  Fall 2019
+                </span>
+              </li>
               <li class="list-group-item list-group-item-success justify-content-between">
-                Data Structures and Algorithms
+                CSCE 462: Microcomputer Systems
+                <span class="badge badge-default badge-pill float-right">
+                  Fall 2019
+                </span>
+              </li>
+              <li class="list-group-item">
+                ECEN 454: Digital Integrated Circuit Design
+                <span class="badge badge-default badge-pill float-right">
+                  Fall 2019
+                </span>
+              </li>
+              <li class="list-group-item list-group-item-success justify-content-between">
+                  CSCE 313: Intro to Computer Systems
+                <span class="badge badge-default badge-pill float-right">
+                  Spring 2018
+                </span>
+              </li>
+              <li class="list-group-item">
+                  ECEN 350: Computer Architecture & Design
+                <span class="badge badge-default badge-pill float-right">
+                  Spring 2018
+                </span>
+              </li>
+              <li class="list-group-item list-group-item-success justify-content-between">
+                CSCE 221: Data Structures & Algorithms
                 <span class="badge badge-default badge-pill float-right">
                   Fall 2017
                 </span>
               </li>
               <li class="list-group-item">
-                Intro to Digital System and Design
+                ECEN 248: Intro to Digital System & Design
                 <span class="badge badge-default badge-pill float-right">
                   Fall 2017
                 </span>
               </li>
               <li class="list-group-item list-group-item-success">
-                Discrete Structures for Computing
+                CSCE 222: Discrete Structures for Computing
                 <span class="badge badge-default badge-pill float-right">
                   Spring 2017
                 </span>
               </li>
               <li class="list-group-item">
-              Introduction to Program Design and Concepts
+              CSCE 121: Introduction to Program Design & Concepts
               <span class="badge badge-default badge-pill float-right">
                   Spring 2017
                 </span>
