Updated description content

--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@
                     </div>
                   </div>
                   <h5><a href="https://github.com/BenWong1097/Fiverr-Buyer-Request-Notifier" target="_blank">- Source Code -</a></h5>
-                  <ul align="left" style="margin-top:30px">
+                  <span class="badge badge-default badge-no-size">Python</span>
+                  <ul align="left" style="margin-top:10px">
                     <li>Utilizes the Selenium WebDriver to notify sellers when a new buyer request is available for them</li>
-                    <li>Implemented with Python</li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
@@ -440,11 +440,11 @@
                     </div>
                   </div>
                   <h5><a href="https://github.com/BenWong1097/Data-Analyzer" target="_blank">- Source Code -</a></h5>
-                  <ul align="left" style="margin-top:30px">
+                  <span class="badge badge-default badge-no-size">MATLAB</span>
+                  <ul align="left" style="margin-top:10px">
                     <li>Generates statistics for any given data sets (median, mode, variance, standard deviation, etc.)</li>
                     <li>Produces graphs to display the data sets</li>
                     <li>Able to calculate the probability of a given data being present in a data set and vice versa</li>
-                    <li>Implemented with MATLAB</li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
@@ -496,16 +496,12 @@
                         ⇀
                     </div>
                   </div>
-                  <!-- <ul align="left" style="margin-top:30px">
-                    <li>Developed in a 48-hour game jam</li>
-                    <li>Built with Game Maker Studio</li>
-                    <li><a href="https://sgda1.itch.io/life-of-joe" target="_blank">More info here!</a></li>
-                  </ul> -->
                   <div class="container">
-                    <h3>Life of Joe</h3>
-                  <ul align="left" style="margin-top:30px">
+                  <span class="badge badge-default badge-no-size">GML</span>
+                  <ul align="left" style="margin-top:10px">
                     <li>Developed in a 48-hour game jam</li>
                     <li>Built with Game Maker Studio</li>
+                    <li>What's with all the bombs and bulls? No idea! Just jam it out to the catchy tune and have some fun with Joe in this rhythm runner as he flashes some moves!</li>
                     <li><a href="https://sgda1.itch.io/life-of-joe" target="_blank">More info here!</a></li>
                   </ul>
                     <!--<div class="class">
@@ -566,12 +562,13 @@
                     </div>
                   </div>
                   <h5><a href="https://github.com/BenWong1097/Chillennium2017ShroomLab" target="_blank">- Source Code -</a></h5>
-                  <ul align="left" style="margin-top:30px;">
+                  <p class="badge badge-default badge-no-size">Phaser.js</p>
+                  <ul align="left" style="margin-top:10px;">
                     <li>Developed in a 48-hour game jam</li>
-                    <li>Implemented with Phaser.js</li>
                     <li>Built with Phaser Studio</li>
+                    <li>Follow a mad scientist who infiltrates a lab in search of the coveted giant shroom!</li>
                     <li><a href="https://marooncatz.itch.io/shroom-lab" target="_blank">More info here!</a></li>
-                    <li><a href="https://shroomlab.herokuapp.com" target="_blank"><b>~Play!~</b></a></li>
+                    <li>Check it out <a href="https://shroomlab.herokuapp.com" target="_blank"><b>here</b></a>!</li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
@@ -624,9 +621,10 @@
                     </div>
                   </div>
                   <h5><a href="https://github.com/BenWong1097/MealTime" target="_blank">- Source Code -</a></h5>
-                  <ul align="left" style="margin-top:30px;">
-                    <li>Implemented with Create.js</li>
-                    <li><a href="https://mealtimethegame.herokuapp.com" target="_blank"><b>~Play!~</b></a></li>
+                  <span class="badge badge-default badge-no-size">Create.js</span>
+                  <ul align="left" style="margin-top:10px;">
+                    <li>Battle it out with the food army in this simple side-scrolling game!</li>
+                    <li>Check it out <a href="https://mealtimethegame.herokuapp.com" target="_blank"><b>here</b></a>!</li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
@@ -674,10 +672,12 @@
                         ⇀
                       </div>
                     </div>
-                  <ul align="left" style="margin-top:30px;">
+                  <span class="badge badge-default badge-no-size">Angular</span> | 
+                  <span class="badge badge-default badge-no-size">Node.js</span>
+                  <ul align="left" style="margin-top:10px;">
                     <li>Group project for the <b><a href="https://maroonlink.tamu.edu/organization/Engineers_Serve_Community">Engineers Serving the Community (ESC)</a></b> organization</li>
                     <li>Served as the front end developer of the team, also helping with part of the backend</li>
-                    <li>Worked with Angular and Node.js</li>
+                    <li>A tool intended to act as an alternative to MyEdu, a popular college course scheduler that shut down</li>
                     <li>Check out the <a href="https://open-edu-tamu.herokuapp.com" target="_blank"><b>demo</b></a>!</li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
