Mini content update

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div class="bg2 text-white intro-section">
                 <p align="left">Hello!</p>
                 <p align="left">My name is Benjamin Wong and this is my personal website. Feel free to take a look around to learn more about me!</p>
+                <p align="left">As a side note, the site's content is a tad outdated as I'm working on a new layout for my site!</p>
         </div>
       </div>
     </header>
@@ -275,7 +276,7 @@
         <hr style="margin-right:50%;">
         <div class="row">
           <p class="more-text">
-            I was born and raised in Houston, Texas as a first-generation Asian American. I am currently a sophomore at Texas A&M - College Station and pursuing Computer Engineering with an emphasis on Computer Science. 
+            I was born and raised in Houston, Texas so you already know I'm a big foodie. I'm currently a senior at Texas A&M and pursuing Computer Engineering. I've always been interested in designing and developing things from mini video games to web applications.
           </p>
           <span class="more-text">I love expanding my programming and problem solving skills, looking for any chance to learn more and create things.</span>
         </div>
@@ -287,10 +288,18 @@
         <h2 class="text-center">Contact Me</h2>
         <hr class="star-light">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate>
+            <h4>
+              <a href="mailto:benjamin@bwong.me" class="badge badge-default badge-pill">Email</a>
+              <a href="https://github.com/benwong1097" class="badge badge-default badge-pill">GitHub</a>
+              <a href="https://www.linkedin.com/in/bwong1097/" class="badge badge-default badge-pill">LinkedIn</a>
+            </h4>
+            
+            <!-- Broken due to outdated code -->
+            
+            <!-- <form name="sentMessage" id="contactForm" novalidate>
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls">
                   <label>Name</label>
@@ -324,7 +333,7 @@
               <div class="form-group">
                 <button type="submit" class="btn btn-success btn-lg">Send</button>
               </div>
-            </form>
+            </form> -->
           </div>
         </div>
       </div>
